--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Bykov Igor <igorb.dev@websm.io>"]
 
 [dependencies]
-ipnetwork = "0.12.5"
+
+[dependencies.ipnetwork]
+git = "https://github.com/achanda/ipnetwork"
+rev = "9920316"
+features = ["ipv6-iterator"]
