--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Bykov Igor <igorb.dev@websm.io>"]
 
 [dependencies]
+serde_json = "1.0.2"
 
 [dependencies.clap]
 version = "2.25.0"
