--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ features = ["yaml"]
 
 [dependencies.ipnetwork]
 git = "https://github.com/achanda/ipnetwork"
-rev = "9920316"
-features = ["ipv6-iterator"]
+rev = "1abf10d"
+features = ["ipv6-iterator", "ipv6-methods"]
